# ChangeLog for app-emulation/uae
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/uae/ChangeLog,v 1.24 2005/01/01 14:18:27 eradicator Exp $

*uae-0.8.22-r1 (22 Oct 2004)

  22 Oct 2004; David Holm <dholm@gentoo.org>
  +files/uae-0.8.22-alsa-support.diff,
  -files/uae-0.8.27_pre20040720-ppc-asm-fix.patch, +uae-0.8.22-r1.ebuild,
  uae-0.8.22.ebuild, -uae-0.8.25_pre20040302.ebuild,
  -uae-0.8.27_pre20040720.ebuild:
  Added patch from bug #62957.
  Moved e-uae out of the uae dir.

  23 Jul 2004; David Holm <dholm@gentoo.org> uae-0.8.27_pre20040720.ebuild:
  Reverted to old bsdsocket code.

  21 Jul 2004; David Holm <dholm@gentoo.org> :
  Uploaded correct snapshot in order to fix bug #57809.

*uae-0.8.27_pre20040720 (20 Jul 2004)

  20 Jul 2004; David Holm <dholm@gentoo.org>
  +files/uae-0.8.27_pre20040720-ppc-asm-fix.patch,
  -uae-0.8.23_pre20040129.ebuild, +uae-0.8.27_pre20040720.ebuild:
  Version bumped using CVS snapshot.
  Removed version 0.8.23 from portage.

  16 Jul 2004; David Holm <dholm@gentoo.org> uae-0.8.25_pre20040302.ebuild:
  Strip -msse and -msse2 as they break compilation on x86.

  24 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> uae-0.8.22.ebuild,
  uae-0.8.23_pre20040129.ebuild, uae-0.8.25_pre20040302.ebuild:
  don't use deprecated ?: use syntax

  07 Mar 2004; David Holm <dholm@gentoo.org> uae-0.8.25_pre20040302.ebuild:
  Replace -O3 with -O2 (again). Splitting cpuemu_6.c was not enough.

  05 Mar 2004; David Holm <dholm@gentoo.org> uae-0.8.25_pre20040302.ebuild,
  files/split_cpuemu.pl:
  Added split script from Michal Januszewski which reduces the amount of time
  and memory needed to compile the CPU-core.

  04 Mar 2004; David Holm <dholm@gentoo.org> uae-0.8.25_pre20040302.ebuild,
  files/install_libscg_gentoo:
  Cleanup submitted by Jonathan Heaney.

*uae-0.8.25_pre20040302 (04 Mar 2004)

  04 Mar 2004; David Holm <dholm@gentoo.org> metadata.xml,