@@ -1,9 +1,11 @@
-MD5 bd9a4ffb1eff724b306e7ec2bdba7af4 ChangeLog 3826
+MD5 d1df9b69bb7950325e022dcb668a0594 ChangeLog 3944
 MD5 800d59bca6b74f54268ca8c63af928ee metadata.xml 668
-MD5 6feb17ff442210f38ae20e0aa5558c3b uae-0.8.22.ebuild 1293
 MD5 ffdbea5c29ac3b103ff6ace56db8a770 uae-0.8.22-r1.ebuild 1399
+MD5 6feb17ff442210f38ae20e0aa5558c3b uae-0.8.22.ebuild 1293
+MD5 807e92f7fa89c3f028725141b97a8e51 uae-0.8.24.ebuild 1273
 MD5 b2fac0f21ee34abaa6279cf7ad023119 files/digest-uae-0.8.22 62
-MD5 827829b7999933c091736f210ef9903e files/uae-0.8.22-alsa-support.diff 10321
 MD5 77b204c71d52f0a0423054b5a9b8a0cb files/split_cpuemu.pl 498
 MD5 4d3af2d2cc2945b006249066cb8c7adb files/uae-patch.diff 364
+MD5 827829b7999933c091736f210ef9903e files/uae-0.8.22-alsa-support.diff 10321
 MD5 b2fac0f21ee34abaa6279cf7ad023119 files/digest-uae-0.8.22-r1 62
+MD5 1ff2a8aad09cc3871732f041caacd162 files/digest-uae-0.8.24 62
