@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/uae
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/uae/ChangeLog,v 1.24 2005/01/01 14:18:27 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/uae/ChangeLog,v 1.25 2005/07/09 22:57:09 dholm Exp $
+
+*uae-0.8.24 (09 Jul 2005)
+
+  09 Jul 2005; David Holm <dholm@gentoo.org> +uae-0.8.24.ebuild:
+  Version bumped (Bug #71937)
 
 *uae-0.8.22-r1 (22 Oct 2004)
 
